<resources>
    <string name="collection_button">Collections</string>
    <!-- Strings used for fragments for navigation -->
    <string name="view_button">View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting_button">Setting</string>
    <string name="empty_info">Click collections to add or open a document</string>
    <string name="cancel">Cancel</string>
    <string name="Remove">Remove</string>
    <string name="confirm_delete">Are you sure to remove?</string>
    <string name="remove_item">Remove Document</string>
    <string name="rename_item">Rename Document</string>
    <string name="rename_hint">New File Name</string>
    <string name="please_rename">Please input new file name</string>
    <string name="confirm">Confirm</string>
    <string name="collections_title">Collections</string>
    <string name="view_title">Music Flip</string>
    <string name="setting_title">Settings</string>
    <string name="card_content_description">Document</string>
    <string name="camera_on_off_title">Front camera:　</string>
    <string name="camera_off">OFF</string>
    <string name="camera_on">ON</string>
    <string name="floating_action_button_description">Button for adding new document</string>
    <string name="pdf">.pdf</string>

    <!-- Preference -->
    <string name="functionalities_header">Functionalities</string>
    <string name="general_header">General Settings</string>
    <string name="app_header">Application</string>
    <string name="detect_head_shaking_title">Detect Head Shaking</string>
    <string name="language_title">Language</string>
    <string name="theme_title">Theme</string>
    <string name="notification_title">Notification</string>
    <string name="get_help_title">Get Help</string>
    <string name="share_title">Share with Friends</string>
    <string name="about_app_title">About this App</string>
    <string name="english">English</string>
    <string name="cantonese">中文</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="about_app_content">This app helps you flip the pages of your sheet music by simply nodding your head or winking your eyes (you can choose to use one of them in settings). You do not need to flip the pages by hand anymore!</string>
    <string name="get_help_content"><![CDATA[<u>Nodding:</u><br>Flip to next page: Nod your head once<br><br><u>Winking:</u><br>Flip to next page: wink your right eye<br>Flip to previous page: wink your left eye]]></string>
    <string name="share_content">This is a fantastic app that could help you flip your music sheet easily during your performance by simply nodding your head or winking your eyes! Download and try the Music Flip App for free: https://www.google.com <!--TODO: app store link--> </string>
    <string name="theme_auto">Auto</string>
    <string name="ai_detector">AI Detector</string>
    <string name="blinking_title">Blinking</string>
    <string name="blink_sensitivity_title">Sensitivity</string>
    <string name="sound_effect_title">Sound Effect</string>
    <string name="nodding_title">Nodding</string>
    <string name="nodding_sensitivity_title">Sensitivity</string>

    <!--Notification-->
    <string name="notify_title">It\'s time to practice!</string>
    <string name="notify_content">Continue with your music journey with Music Flip.</string>
    <string name="notification_channel_name">Practice reminder</string>

    <!--Welcome Message-->
    <string name="welcome_title">Welcome to Music Flip!</string>
    <string name="welcome_content"><![CDATA[This app helps you flip the pages of your sheet music by simply nodding your head or winking your eyes (you can choose to use one of them in settings). You do not need to flip the pages by hand anymore!<br><br><u>Nodding:</u><br>Flip to next page: Nod your head once<br><br><u>Winking:</u><br>Flip to next page: wink your right eye<br>Flip to previous page: wink your left eye]]></string>

</resources>
